[gd_scene load_steps=7 format=3 uid="uid://bd0t8uq0xv6wr"]

[ext_resource type="Script" path="res://src/scripts/game_objects/game_board.gd" id="2_lhyvx"]
[ext_resource type="Script" path="res://src/scripts/screens/highlights.gd" id="3_ofc5r"]
[ext_resource type="PackedScene" uid="uid://ma7a666pl2us" path="res://src/scenes/ui/user_interface.tscn" id="4_7raef"]
[ext_resource type="PackedScene" uid="uid://3uwharyjlmsp" path="res://src/scenes/ui/right_click_menu.tscn" id="5_4v42b"]
[ext_resource type="Script" path="res://src/scripts/screens/camera_controller.gd" id="5_rko6e"]
[ext_resource type="PackedScene" uid="uid://c288phnhk4720" path="res://src/scenes/dialogs/load_config_dialog.tscn" id="7_ml236"]

[node name="Base" type="Node"]

[node name="Highlights" type="Node2D" parent="."]
z_index = 200
script = ExtResource("3_ofc5r")

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource("2_lhyvx")
metadata/_edit_lock_ = true

[node name="BoardTexture" type="Sprite2D" parent="GameBoard"]
z_index = -1000

[node name="GameObjectManager" type="Node2D" parent="GameBoard"]
metadata/_edit_lock_ = true

[node name="UiLayer" type="CanvasLayer" parent="."]
layer = 105

[node name="UserInterface" parent="UiLayer" instance=ExtResource("4_7raef")]
mouse_filter = 2

[node name="CameraController" type="Node2D" parent="."]
script = ExtResource("5_rko6e")

[node name="Camera2D" type="Camera2D" parent="CameraController"]
ignore_rotation = false
position_smoothing_enabled = true
position_smoothing_speed = 9.0
rotation_smoothing_enabled = true
rotation_smoothing_speed = 9.0

[node name="RightClickMenu" parent="." instance=ExtResource("5_4v42b")]

[node name="LoadConfigDialog" parent="." instance=ExtResource("7_ml236")]
